--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project
-        xmlns="jar://C:/Program Files (x86)/JetBrains/IntelliJ IDEA 2016.2.1/plugins/maven/lib/maven.jar!/schemas/maven-4.0.0.xsd">
+<project>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>solid-dojo</artifactId>
     <groupId>squeed</groupId>
@@ -18,5 +17,24 @@
             <version>3.5.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
