--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project
-        xmlns="jar://C:/Program Files (x86)/JetBrains/IntelliJ IDEA 2016.2.1/plugins/maven/lib/maven.jar!/schemas/maven-4.0.0.xsd">
+<project>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>solid-dojo</artifactId>
     <groupId>squeed</groupId>
